# pigpio_controller

./: CMakeLists.txt  package.xml
include/: pigpio_controller_node.hpp  suction_controller_node.hpp
launch/: local.launch  remote.launch
scripts/: controller.py
src/: pigpio_controller_node.cpp  suction_controller_node.cpp
